AB-Testing/virtual-service-with-header-subsets.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: headers-vs
spec:
  hosts:
    - "*"
  gateways:
    - headers-gateway
  http:
    - match:
        - uri:
            prefix: /headers
          headers:
            #end-user:
            #  exact: redhatter
            User-Agent:
              regex: '.*Chrome.*'
      route:
        - destination:
            host: headers
            subset: v2
    - match:
        - uri:
            prefix: /headers
      route:
        - destination:
            host: headers
            subset: v1
